# ecommerce-backend

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app/core/: database.py  security.py
app/models/: cart_items.py  cart_model.py  product_model.py  user_model.py
app/routers/: admin.py  admin_router.py  cart_router.py  products.py  products_router.py  users.py  users_router.py
app/schemas/cart/: cart_add_item_request.py
app/schemas/product/: product_create.py  product_request.py  product_response.py
app/schemas/user/: change_pass_request.py  login_request.py  user_create.py  user_modify.py  user_register.py  user_response.py
app/services/: create_product.py  create_user.py  get_user_by_id.py  get_user_cart.py
app/services/admin/: create_user_admin.py  delete_user_by_id.py  get_user_by_id.py  update_user_role.py
app/services/cart/: add_item_to_cart.py
app/services/product/: create_product.py  get_all_products.py  get_product_by_id.py
app/services/user/: change_pass.py  create_user.py  delete_user.py  update_user.py
routers/: users.py
schemas/product/: product_create.py
schemas/user/: user_response.py
services/: create_user.py
